--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -215,11 +215,7 @@ a {
 }
 
 a:link,
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
-
+a:visited,
 a:hover,
 a:active {
   text-decoration: none;
