--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -20,11 +20,11 @@
                     <label th:text="|#{document.label.docNo} : ${documentNo}|"></label>
                 </div>
                 <div>
-                    <div class="button-list">
+                    <div class="btn-list">
                         <button type="button" class="default-line" onclick="openProcessStatusPopUp()" th:text="#{process.label.processMap}"></button>
                         <button type="button" class="default-line" th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])" th:text="#{common.btn.print}"></button>
                     </div>
-                    <div id="button-container" class="button-list"></div>
+                    <div class="btn-list" id="button-container"></div>
                 </div>
             </div>
             <div>
