--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="btn-bar">
-                <button class="point-fill" type="button" th:text="#{user.label.editUserInfo}"
+                <button class="point-fill" type="button" th:text="#{common.btn.modify}"
                         th:onclick="restSubmit('put', [[@{/rest/users/{userKey}/info(userKey=${users.userKey})}]])"></button>
             </div>
         </div>
