--- a/src/main/resources/public/template/boardAdmin/boardAdminEdit.html
+++ b/src/main/resources/public/template/boardAdmin/boardAdminEdit.html
@@ -79,14 +79,14 @@
                            onKeyup="this.value=this.value.replace(/[^0-9]/g,'');"/>MB
             </div>
             <div class="btn-bar">
-                <button class="default-line" onclick="location.href='/board-admin/search'"
-                        th:text="#{common.btn.list}"></button>
+                <button class="point-fill" th:unless="${boardAdmin?.boardAdminId}" onclick="saveBoardAdmin('post')"
+                        th:text="#{common.btn.register}"></button>
                 <button class="point-fill" th:if="${boardAdmin?.boardAdminId}" onclick="saveBoardAdmin('put')"
                         th:text="#{common.btn.modify}"></button>
                 <button class="default-line" th:if="${boardAdmin?.boardAdminId}" onclick="deleteBoardAdmin()"
                         th:disabled="${!boardAdmin.enabled}" th:text="#{common.btn.delete}"></button>
-                <button class="point-fill" th:unless="${boardAdmin?.boardAdminId}" onclick="saveBoardAdmin('post')"
-                        th:text="#{common.btn.save}"></button>
+                <button class="default-line" onclick="location.href='/board-admin/search'"
+                        th:text="#{common.btn.list}"></button>
             </div>
         </div>
     </div>
