--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -16,14 +16,14 @@
     <div class="document-container">
         <div class="contents token-document">
             <div class="button-board">
-                <div class="button-list">
+                <div class="btn-list">
                     <button type="button" class="default-line" onclick="openProcessStatusPopUp()"
                             th:text="#{process.label.processMap}"></button>
+                    <div id="button-container" class="btn-list"></div>
                     <button type="button" class="default-line"
                             th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])"
                             th:text="#{common.btn.print}"></button>
                 </div>
-                <div id="button-container" class="button-list"></div>
             </div>
             <div>
                 <form id="frm" name="frm">
