--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -152,9 +152,9 @@
                 </label>
             </div>
             <div class="btn-bar">
-                <button class="point-fill" type="button" th:if="!${users?.userKey}" th:text="#{auth.user.create}"
+                <button class="point-fill" type="button" th:if="!${users?.userKey}" th:text="#{common.btn.register}"
                         th:onclick="restSubmit('post', [[@{/rest/users}]])"></button>
-                <button class="point-fill" type="button" th:if="${users?.userKey}" th:text="#{user.label.editUserInfo}"
+                <button class="point-fill" type="button" th:if="${users?.userKey}" th:text="#{common.btn.modify}"
                         th:onclick="restSubmit('put', [[@{/rest/users/{userKey}/all(userKey=${users.userKey})}]])"></button>
                 <button class="default-line" th:text="#{common.btn.list}" onclick="location.href='/users/search'"></button>
             </div>
