코드 조회 쿼리 수정 (공통포함)

--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -35,7 +35,7 @@
 <th:block layout:fragment="pageScript">
     <script th:inline="javascript">
         /*<![CDATA[*/
-        var offsetCount = 0;
+        let offsetCount = 0;
         const offsetSize = 15;
 
         window.onload = function () {
