--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -38,7 +38,7 @@ input {
   margin-right: 0.0625rem; // 1px
   vertical-align: middle;
   &.search {
-    background: url($icon-folder-path + "icon_search.svg") no-repeat center right;
+    background: url($icon-folder-path + "icon_search.svg") no-repeat 100%-3 50%;
     background-color: $element-bg-color;
     padding-right: 1.875rem; // 30px
   }
