--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -152,7 +152,8 @@
                 </label>
             </div>
             <div class="btn-bar">
-                <button class="point-fill" type="button" th:if="!${users?.userKey}" th:text="#{common.btn.register}"
+                <button class="point-fill" type="button" th:if="!${users?.userKey}"
+                        th:text="#{common.btn.register}"></button>
             <div class="btn-list btn-bar">
                 <button class="point-fill" type="button" th:if="!${users?.userKey}" th:text="#{auth.user.create}"
                         th:onclick="restSubmit('post', [[@{/rest/users}]])"></button>
