버그 수정 - 문서함 메뉴에서 select box와 input 박스 넓이 수정 - 문서함 메뉴에서 관련문서 추가 시 이미지 미표시 수정 - 돋보기 아이콘 위치 수정

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -232,6 +232,7 @@ input {
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
+  vertical-align: middle;
 }
 
 input::placeholder {
@@ -372,6 +373,7 @@ select {
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
+  vertical-align: middle;
 }
 
 select:not(:disabled):focus {
