--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -64,7 +64,9 @@
                 <div class="form-set">
                     <div class="row">
                         <label th:text="#{customCode.label.condition}"></label>
-                        <button class="plus" onclick="addCondition()"></button>
+                        <button class="default-line plus" onclick="addCondition()">
+                            <span class="icon-plus"></span>
+                        </button>
                     </div>
                     <div id="condition"></div>
                 </div>
