--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -281,6 +281,7 @@ input {
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
+  vertical-align: middle;
 }
 
 input::placeholder {
@@ -421,6 +422,7 @@ select {
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
+  vertical-align: middle;
 }
 
 select:not(:disabled):focus {
