--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -227,6 +227,7 @@ input {
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
+  vertical-align: middle;
 }
 
 input::placeholder {
@@ -367,6 +368,7 @@ select {
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
+  vertical-align: middle;
 }
 
 select:not(:disabled):focus {
@@ -700,7 +702,7 @@ input {
 }
 
 input.search {
-  background: url("../media/icons/icon_search.svg") no-repeat center right;
+  background: url("../media/icons/icon_search.svg") no-repeat 97% 50%;
   background-color: #ffffff;
   padding-right: 1.875rem;
 }
@@ -1277,6 +1279,11 @@ button.list-popup:hover {
   background-color: #E1E3E6;
 }
 
+.btn.plus,
+button.plus {
+  padding: 0;
+}
+
 .btn .icon-search,
 button .icon-search {
   display: inline-block;
@@ -1323,6 +1330,22 @@ button .icon_delete {
   -webkit-mask-size: 18px 20px;
   mask-size: 18px 20px;
   background: #586872;
+}
+
+.btn .icon-plus,
+button .icon-plus {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  -webkit-mask-image: url("../media/icons/icon_plus.svg");
+  mask-image: url("../media/icons/icon_plus.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-size: 20px 20px;
+  mask-size: 20px 20px;
+  background: #CCCED1;
 }
 
 .column-1 {
