--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -164,6 +164,225 @@ input, button, select, optgroup, textarea {
   overflow: hidden;
 }
 
+/* _scrollbars.scss 
+ *
+ * 파일 경로 : template/_scrollbars.scss
+ * @description 스크롤바 디자인
+ * @author wdj
+ * @version 1.0
+ */
+.scrollbar > .os-scrollbar-horizontal {
+  right: 10px;
+  height: 12px;
+}
+
+.scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
+  min-width: 30px;
+}
+
+.scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: block;
+  top: -6px;
+  bottom: -2px;
+}
+
+.scrollbar > .os-scrollbar-vertical {
+  bottom: 10px;
+  width: 8px;
+}
+
+.scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
+  min-height: 30px;
+}
+
+.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  display: block;
+  left: -6px;
+  right: -2px;
+}
+
+.scrollbar > .os-scrollbar-corner {
+  height: 10px;
+  width: 10px;
+  background-color: transparent;
+}
+
+.scrollbar > .os-scrollbar {
+  box-sizing: border-box;
+  background: transparent;
+}
+
+.scrollbar > .os-scrollbar > .os-scrollbar-track {
+  background: rgba(235, 235, 235, 0.6);
+  border-radius: 8px;
+}
+
+.scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  border-radius: 8px;
+  background: #E1E3E6;
+}
+
+.scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
+  background: #CCCED1;
+}
+
+.scrollbar > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle {
+  background: #CCCED1;
+}
+
+.scrollbar > .os-scrollbar.os-scrollbar-unusable {
+  background: transparent;
+}
+
+.scrollbar.os-host-rtl > .os-scrollbar-horizontal {
+  left: 10px;
+  right: 0;
+}
+
+.scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+.scrollbar.os-host-scrollbar-horizontal-hidden > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  display: none;
+}
+
+.scrollbar.os-host-scrollbar-vertical-hidden > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  display: none;
+}
+
+.os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  right: -6px;
+  left: -2px;
+}
+
+.textarea-scroll-wrapper {
+  display: block;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #586872;
+  background-color: #ffffff;
+  border: 0.0625rem solid #EBEBEB;
+  border-radius: 0.0625rem;
+  padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+  resize: vertical;
+}
+
+.textarea-scroll-wrapper:focus-within {
+  outline: 0;
+  border: 0.0625rem solid #0098FF;
+}
+
+.textarea-scroll-wrapper:hover {
+  outline: 0;
+  border: 0.0625rem solid #0098FF;
+  box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+}
+
+.inner-scrollbar > .os-scrollbar-horizontal {
+  right: 10px;
+  height: 12px;
+}
+
+.inner-scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
+  min-width: 30px;
+}
+
+.inner-scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: block;
+  top: -6px;
+  bottom: -2px;
+}
+
+.inner-scrollbar > .os-scrollbar-vertical {
+  bottom: 10px;
+  width: 4px;
+}
+
+.inner-scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
+  min-height: 30px;
+}
+
+.inner-scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  display: block;
+  left: -6px;
+  right: -2px;
+}
+
+.inner-scrollbar > .os-scrollbar-corner {
+  height: 10px;
+  width: 10px;
+  background-color: transparent;
+}
+
+.inner-scrollbar > .os-scrollbar {
+  box-sizing: border-box;
+  background: transparent;
+}
+
+.inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
+  background: rgba(235, 235, 235, 0.6);
+  border-radius: 8px;
+}
+
+.inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  border-radius: 8px;
+  background: #E1E3E6;
+}
+
+.inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
+  background: #CCCED1;
+}
+
+.inner-scrollbar > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle {
+  background: #CCCED1;
+}
+
+.inner-scrollbar > .os-scrollbar.os-scrollbar-unusable {
+  background: transparent;
+}
+
+.scrollbar.os-host-rtl > .os-scrollbar-horizontal {
+  left: 10px;
+  right: 0;
+}
+
+.scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+.scrollbar.os-host-scrollbar-horizontal-hidden > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  display: none;
+}
+
+.scrollbar.os-host-scrollbar-vertical-hidden > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  display: none;
+}
+
+.os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  right: -6px;
+  left: -2px;
+}
+
 /* _fonts.scss 
  *
  * 파일 경로 : template/_fonts.scss
@@ -264,11 +483,7 @@ a {
 }
 
 a:link,
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
-
+a:visited,
 a:hover,
 a:active {
   text-decoration: none;
@@ -747,7 +962,7 @@ button {
   white-space: nowrap;
   vertical-align: middle;
   overflow: visible;
-  padding: 0.75rem 1.563rem 0.75rem 1.563rem;
+  padding: 0.5625rem 1.563rem 0.5625rem 1.563rem;
   cursor: pointer;
 }
 
@@ -762,316 +977,316 @@ button:disabled {
   cursor: default;
 }
 
-.btn .point-fill,
-button .point-fill {
+.btn.point-fill,
+button.point-fill {
   color: #ffffff;
   background-color: #0098FF;
   border-color: transparent;
 }
 
-.btn .point-fill .icon,
-button .point-fill .icon {
+.btn.point-fill .icon,
+button.point-fill .icon {
   display: inline-block;
   background: #ffffff;
 }
 
-.btn .point-fill:focus, .btn .point-fill:hover,
-button .point-fill:focus,
-button .point-fill:hover {
+.btn.point-fill:focus, .btn.point-fill:hover,
+button.point-fill:focus,
+button.point-fill:hover {
   color: #ffffff;
   background-color: #33ADFF;
   border-color: transparent;
 }
 
-.btn .point-fill:focus .icon, .btn .point-fill:hover .icon,
-button .point-fill:focus .icon,
-button .point-fill:hover .icon {
+.btn.point-fill:focus .icon, .btn.point-fill:hover .icon,
+button.point-fill:focus .icon,
+button.point-fill:hover .icon {
   background: #ffffff;
 }
 
-.btn .point-fill:not(:disabled):active,
-button .point-fill:not(:disabled):active {
+.btn.point-fill:not(:disabled):active,
+button.point-fill:not(:disabled):active {
   color: #ffffff;
   background-color: #0088E6;
   border-color: transparent;
 }
 
-.btn .point-fill:not(:disabled):active .icon,
-button .point-fill:not(:disabled):active .icon {
+.btn.point-fill:not(:disabled):active .icon,
+button.point-fill:not(:disabled):active .icon {
   background: #ffffff;
 }
 
-.btn .point-fill:disabled,
-button .point-fill:disabled {
+.btn.point-fill:disabled,
+button.point-fill:disabled {
   color: #ffffff;
   background-color: #0098FF;
   border-color: transparent;
   opacity: 0.3;
 }
 
-.btn .point-fill:disabled .icon,
-button .point-fill:disabled .icon {
+.btn.point-fill:disabled .icon,
+button.point-fill:disabled .icon {
   background: #ffffff;
 }
 
-.btn .point-line,
-button .point-line {
+.btn.point-line,
+button.point-line {
   color: #0098FF;
   background-color: #ffffff;
   border-color: #0098FF;
 }
 
-.btn .point-line .icon,
-button .point-line .icon {
+.btn.point-line .icon,
+button.point-line .icon {
   display: inline-block;
   background: #0098FF;
 }
 
-.btn .point-line:focus, .btn .point-line:hover,
-button .point-line:focus,
-button .point-line:hover {
+.btn.point-line:focus, .btn.point-line:hover,
+button.point-line:focus,
+button.point-line:hover {
   color: #0098FF;
   background-color: rgba(0, 152, 255, 0.1);
   border-color: #0098FF;
 }
 
-.btn .point-line:focus .icon, .btn .point-line:hover .icon,
-button .point-line:focus .icon,
-button .point-line:hover .icon {
+.btn.point-line:focus .icon, .btn.point-line:hover .icon,
+button.point-line:focus .icon,
+button.point-line:hover .icon {
   background: #0098FF;
 }
 
-.btn .point-line:not(:disabled):active,
-button .point-line:not(:disabled):active {
+.btn.point-line:not(:disabled):active,
+button.point-line:not(:disabled):active {
   color: #ffffff;
   background-color: #33ADFF;
   border-color: #0098FF;
   opacity: 0.3;
 }
 
-.btn .point-line:not(:disabled):active .icon,
-button .point-line:not(:disabled):active .icon {
+.btn.point-line:not(:disabled):active .icon,
+button.point-line:not(:disabled):active .icon {
   background: #ffffff;
 }
 
-.btn .point-line:disabled,
-button .point-line:disabled {
+.btn.point-line:disabled,
+button.point-line:disabled {
   color: #0098FF;
   background-color: #ffffff;
   border-color: #0098FF;
   opacity: 0.3;
 }
 
-.btn .point-line:disabled .icon,
-button .point-line:disabled .icon {
+.btn.point-line:disabled .icon,
+button.point-line:disabled .icon {
   background: #0098FF;
 }
 
-.btn .default-fill,
-button .default-fill {
+.btn.default-fill,
+button.default-fill {
   color: #3F4B56;
   background-color: #E1E3E6;
   border-color: transparent;
 }
 
-.btn .default-fill .icon,
-button .default-fill .icon {
+.btn.default-fill .icon,
+button.default-fill .icon {
   display: inline-block;
   background: #3F4B56;
 }
 
-.btn .default-fill:focus, .btn .default-fill:hover,
-button .default-fill:focus,
-button .default-fill:hover {
+.btn.default-fill:focus, .btn.default-fill:hover,
+button.default-fill:focus,
+button.default-fill:hover {
   color: #3F4B56;
   background-color: #EBEBEB;
   border-color: transparent;
 }
 
-.btn .default-fill:focus .icon, .btn .default-fill:hover .icon,
-button .default-fill:focus .icon,
-button .default-fill:hover .icon {
+.btn.default-fill:focus .icon, .btn.default-fill:hover .icon,
+button.default-fill:focus .icon,
+button.default-fill:hover .icon {
   background: #3F4B56;
 }
 
-.btn .default-fill:not(:disabled):active,
-button .default-fill:not(:disabled):active {
+.btn.default-fill:not(:disabled):active,
+button.default-fill:not(:disabled):active {
   color: #3F4B56;
   background-color: #CCCED1;
   border-color: transparent;
 }
 
-.btn .default-fill:not(:disabled):active .icon,
-button .default-fill:not(:disabled):active .icon {
+.btn.default-fill:not(:disabled):active .icon,
+button.default-fill:not(:disabled):active .icon {
   background: #3F4B56;
 }
 
-.btn .default-fill:disabled,
-button .default-fill:disabled {
+.btn.default-fill:disabled,
+button.default-fill:disabled {
   color: #3F4B56;
   background-color: #E1E3E6;
   border-color: transparent;
   opacity: 0.5;
 }
 
-.btn .default-fill:disabled .icon,
-button .default-fill:disabled .icon {
+.btn.default-fill:disabled .icon,
+button.default-fill:disabled .icon {
   background: #3F4B56;
 }
 
-.btn .default-line,
-button .default-line {
+.btn.default-line,
+button.default-line {
   color: #3F4B56;
   background-color: #ffffff;
   border-color: #EBEBEB;
 }
 
-.btn .default-line .icon,
-button .default-line .icon {
+.btn.default-line .icon,
+button.default-line .icon {
   display: inline-block;
   background: #3F4B56;
 }
 
-.btn .default-line:focus, .btn .default-line:hover,
-button .default-line:focus,
-button .default-line:hover {
+.btn.default-line:focus, .btn.default-line:hover,
+button.default-line:focus,
+button.default-line:hover {
   color: #3F4B56;
   background-color: rgba(230, 230, 230, 0.3);
   border-color: #EBEBEB;
 }
 
-.btn .default-line:focus .icon, .btn .default-line:hover .icon,
-button .default-line:focus .icon,
-button .default-line:hover .icon {
+.btn.default-line:focus .icon, .btn.default-line:hover .icon,
+button.default-line:focus .icon,
+button.default-line:hover .icon {
   background: #3F4B56;
 }
 
-.btn .default-line:not(:disabled):active,
-button .default-line:not(:disabled):active {
+.btn.default-line:not(:disabled):active,
+button.default-line:not(:disabled):active {
   color: #3F4B56;
   background-color: #EBEBEB;
   border-color: #CCCED1;
 }
 
-.btn .default-line:not(:disabled):active .icon,
-button .default-line:not(:disabled):active .icon {
+.btn.default-line:not(:disabled):active .icon,
+button.default-line:not(:disabled):active .icon {
   background: #3F4B56;
 }
 
-.btn .default-line:disabled,
-button .default-line:disabled {
+.btn.default-line:disabled,
+button.default-line:disabled {
   color: #3F4B56;
   background-color: #ffffff;
   border-color: #EBEBEB;
   opacity: 0.3;
 }
 
-.btn .default-line:disabled .icon,
-button .default-line:disabled .icon {
+.btn.default-line:disabled .icon,
+button.default-line:disabled .icon {
   background: #3F4B56;
 }
 
-.btn .ghost-fill,
-button .ghost-fill {
+.btn.ghost-fill,
+button.ghost-fill {
   color: #3F4B56;
   background-color: transparent;
   border-color: transparent;
 }
 
-.btn .ghost-fill .icon,
-button .ghost-fill .icon {
+.btn.ghost-fill .icon,
+button.ghost-fill .icon {
   display: inline-block;
   background: #3F4B56;
 }
 
-.btn .ghost-fill:focus, .btn .ghost-fill:hover,
-button .ghost-fill:focus,
-button .ghost-fill:hover {
+.btn.ghost-fill:focus, .btn.ghost-fill:hover,
+button.ghost-fill:focus,
+button.ghost-fill:hover {
   color: #3F4B56;
   background-color: rgba(230, 230, 230, 0.3);
   border-color: transparent;
 }
 
-.btn .ghost-fill:focus .icon, .btn .ghost-fill:hover .icon,
-button .ghost-fill:focus .icon,
-button .ghost-fill:hover .icon {
+.btn.ghost-fill:focus .icon, .btn.ghost-fill:hover .icon,
+button.ghost-fill:focus .icon,
+button.ghost-fill:hover .icon {
   background: #3F4B56;
 }
 
-.btn .ghost-fill:not(:disabled):active,
-button .ghost-fill:not(:disabled):active {
+.btn.ghost-fill:not(:disabled):active,
+button.ghost-fill:not(:disabled):active {
   color: #3F4B56;
   background-color: #EBEBEB;
   border-color: transparent;
 }
 
-.btn .ghost-fill:not(:disabled):active .icon,
-button .ghost-fill:not(:disabled):active .icon {
+.btn.ghost-fill:not(:disabled):active .icon,
+button.ghost-fill:not(:disabled):active .icon {
   background: #3F4B56;
 }
 
-.btn .ghost-fill:disabled,
-button .ghost-fill:disabled {
+.btn.ghost-fill:disabled,
+button.ghost-fill:disabled {
   color: #3F4B56;
   background-color: transparent;
   border-color: transparent;
   opacity: 0.3;
 }
 
-.btn .ghost-fill:disabled .icon,
-button .ghost-fill:disabled .icon {
+.btn.ghost-fill:disabled .icon,
+button.ghost-fill:disabled .icon {
   background: #3F4B56;
 }
 
-.btn .ghost-line,
-button .ghost-line {
+.btn.ghost-line,
+button.ghost-line {
   color: #CCCED1;
   background-color: #ffffff;
   border-color: #EBEBEB;
 }
 
-.btn .ghost-line .icon,
-button .ghost-line .icon {
+.btn.ghost-line .icon,
+button.ghost-line .icon {
   display: inline-block;
   background: #CCCED1;
 }
 
-.btn .ghost-line:focus, .btn .ghost-line:hover,
-button .ghost-line:focus,
-button .ghost-line:hover {
+.btn.ghost-line:focus, .btn.ghost-line:hover,
+button.ghost-line:focus,
+button.ghost-line:hover {
   color: #0098FF;
   background-color: #ffffff;
   border-color: #0098FF;
 }
 
-.btn .ghost-line:focus .icon, .btn .ghost-line:hover .icon,
-button .ghost-line:focus .icon,
-button .ghost-line:hover .icon {
+.btn.ghost-line:focus .icon, .btn.ghost-line:hover .icon,
+button.ghost-line:focus .icon,
+button.ghost-line:hover .icon {
   background: #0098FF;
 }
 
-.btn .ghost-line:not(:disabled):active,
-button .ghost-line:not(:disabled):active {
+.btn.ghost-line:not(:disabled):active,
+button.ghost-line:not(:disabled):active {
   color: #0098FF;
   background-color: #ffffff;
   border-color: #0098FF;
 }
 
-.btn .ghost-line:not(:disabled):active .icon,
-button .ghost-line:not(:disabled):active .icon {
+.btn.ghost-line:not(:disabled):active .icon,
+button.ghost-line:not(:disabled):active .icon {
   background: #0098FF;
 }
 
-.btn .ghost-line:disabled,
-button .ghost-line:disabled {
+.btn.ghost-line:disabled,
+button.ghost-line:disabled {
   color: #CCCED1;
   background-color: #F7F8F9;
   border-color: #EBEBEB;
   opacity: 1;
 }
 
-.btn .ghost-line:disabled .icon,
-button .ghost-line:disabled .icon {
+.btn.ghost-line:disabled .icon,
+button.ghost-line:disabled .icon {
   background: #CCCED1;
 }
 
@@ -1126,8 +1341,12 @@ button .ghost-line:disabled .icon {
   background: #0098FF;
 }
 
-.btn-group .btn:not(:disabled):active + button, .btn-group .btn:not(:disabled).active + button,
+.btn-group .btn:not(:disabled):active + .btn,
+.btn-group .btn:not(:disabled):active + button, .btn-group .btn:not(:disabled).active + .btn,
+.btn-group .btn:not(:disabled).active + button,
+.btn-group button:not(:disabled):active + .btn,
 .btn-group button:not(:disabled):active + button,
+.btn-group button:not(:disabled).active + .btn,
 .btn-group button:not(:disabled).active + button {
   border-left-color: #0098FF;
 }
