--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -110,6 +110,225 @@ input, button, select, optgroup, textarea {
   overflow: hidden;
 }
 
+/* _scrollbars.scss 
+ *
+ * 파일 경로 : template/_scrollbars.scss
+ * @description 스크롤바 디자인
+ * @author wdj
+ * @version 1.0
+ */
+.scrollbar > .os-scrollbar-horizontal {
+  right: 10px;
+  height: 12px;
+}
+
+.scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
+  min-width: 30px;
+}
+
+.scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: block;
+  top: -6px;
+  bottom: -2px;
+}
+
+.scrollbar > .os-scrollbar-vertical {
+  bottom: 10px;
+  width: 8px;
+}
+
+.scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
+  min-height: 30px;
+}
+
+.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  display: block;
+  left: -6px;
+  right: -2px;
+}
+
+.scrollbar > .os-scrollbar-corner {
+  height: 10px;
+  width: 10px;
+  background-color: transparent;
+}
+
+.scrollbar > .os-scrollbar {
+  box-sizing: border-box;
+  background: transparent;
+}
+
+.scrollbar > .os-scrollbar > .os-scrollbar-track {
+  background: rgba(235, 235, 235, 0.6);
+  border-radius: 8px;
+}
+
+.scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  border-radius: 8px;
+  background: #E1E3E6;
+}
+
+.scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
+  background: #CCCED1;
+}
+
+.scrollbar > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle {
+  background: #CCCED1;
+}
+
+.scrollbar > .os-scrollbar.os-scrollbar-unusable {
+  background: transparent;
+}
+
+.scrollbar.os-host-rtl > .os-scrollbar-horizontal {
+  left: 10px;
+  right: 0;
+}
+
+.scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+.scrollbar.os-host-scrollbar-horizontal-hidden > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  display: none;
+}
+
+.scrollbar.os-host-scrollbar-vertical-hidden > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  display: none;
+}
+
+.os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  right: -6px;
+  left: -2px;
+}
+
+.textarea-scroll-wrapper {
+  display: block;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #586872;
+  background-color: #ffffff;
+  border: 0.0625rem solid #EBEBEB;
+  border-radius: 0.0625rem;
+  padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+  resize: vertical;
+}
+
+.textarea-scroll-wrapper:focus-within {
+  outline: 0;
+  border: 0.0625rem solid #0098FF;
+}
+
+.textarea-scroll-wrapper:hover {
+  outline: 0;
+  border: 0.0625rem solid #0098FF;
+  box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+}
+
+.inner-scrollbar > .os-scrollbar-horizontal {
+  right: 10px;
+  height: 12px;
+}
+
+.inner-scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
+  min-width: 30px;
+}
+
+.inner-scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: block;
+  top: -6px;
+  bottom: -2px;
+}
+
+.inner-scrollbar > .os-scrollbar-vertical {
+  bottom: 10px;
+  width: 4px;
+}
+
+.inner-scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
+  min-height: 30px;
+}
+
+.inner-scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  display: block;
+  left: -6px;
+  right: -2px;
+}
+
+.inner-scrollbar > .os-scrollbar-corner {
+  height: 10px;
+  width: 10px;
+  background-color: transparent;
+}
+
+.inner-scrollbar > .os-scrollbar {
+  box-sizing: border-box;
+  background: transparent;
+}
+
+.inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
+  background: rgba(235, 235, 235, 0.6);
+  border-radius: 8px;
+}
+
+.inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  border-radius: 8px;
+  background: #E1E3E6;
+}
+
+.inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
+  background: #CCCED1;
+}
+
+.inner-scrollbar > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle {
+  background: #CCCED1;
+}
+
+.inner-scrollbar > .os-scrollbar.os-scrollbar-unusable {
+  background: transparent;
+}
+
+.scrollbar.os-host-rtl > .os-scrollbar-horizontal {
+  left: 10px;
+  right: 0;
+}
+
+.scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+.scrollbar.os-host-scrollbar-horizontal-hidden > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  display: none;
+}
+
+.scrollbar.os-host-scrollbar-vertical-hidden > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  display: none;
+}
+
+.os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  right: -6px;
+  left: -2px;
+}
+
 /* _fonts.scss 
  *
  * 파일 경로 : template/_fonts.scss
@@ -700,7 +919,7 @@ input {
 }
 
 input.search {
-  background: url("../media/icons/icon_search.svg") no-repeat center right;
+  background: url("../media/icons/icon_search.svg") no-repeat 97% 50%;
   background-color: #ffffff;
   padding-right: 1.875rem;
 }
@@ -5216,212 +5435,6 @@ span.vertical-bar {
 .color-picker .color-palette div.selected {
   border: 0.375rem solid white;
   outline: 0.063rem solid #0098FF;
-}
-
-.scrollbar > .os-scrollbar-horizontal {
-  right: 10px;
-  height: 12px;
-}
-
-.scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
-  min-width: 30px;
-}
-
-.scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  display: block;
-  top: -6px;
-  bottom: -2px;
-}
-
-.scrollbar > .os-scrollbar-vertical {
-  bottom: 10px;
-  width: 8px;
-}
-
-.scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
-  min-height: 30px;
-}
-
-.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  display: block;
-  left: -6px;
-  right: -2px;
-}
-
-.scrollbar > .os-scrollbar-corner {
-  height: 10px;
-  width: 10px;
-  background-color: transparent;
-}
-
-.scrollbar > .os-scrollbar {
-  box-sizing: border-box;
-  background: transparent;
-}
-
-.scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: rgba(235, 235, 235, 0.6);
-  border-radius: 8px;
-}
-
-.scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
-  border-radius: 8px;
-  background: #E1E3E6;
-}
-
-.scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
-  background: #CCCED1;
-}
-
-.scrollbar > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle {
-  background: #CCCED1;
-}
-
-.scrollbar > .os-scrollbar.os-scrollbar-unusable {
-  background: transparent;
-}
-
-.scrollbar.os-host-rtl > .os-scrollbar-horizontal {
-  left: 10px;
-  right: 0;
-}
-
-.scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
-  -webkit-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-}
-
-.scrollbar.os-host-scrollbar-horizontal-hidden > .os-scrollbar-horizontal .os-scrollbar-handle:before {
-  display: none;
-}
-
-.scrollbar.os-host-scrollbar-vertical-hidden > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  display: none;
-}
-
-.os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  right: -6px;
-  left: -2px;
-}
-
-.textarea-scroll-wrapper {
-  padding: 0.5rem 0.625rem;
-  display: block;
-  border: 0.0625rem solid #EBEBEB;
-  border-radius: 0.0625rem;
-  color: #586872;
-  background-color: #ffffff;
-  font-size: 1rem;
-  font-weight: 400;
-  resize: vertical;
-  line-height: 1.3;
-}
-
-.textarea-scroll-wrapper:focus-within {
-  outline: 0.0625rem solid #EBEBEB solid #0050ff;
-  border-radius: 0.0625rem;
-}
-
-.inner-scrollbar > .os-scrollbar-horizontal {
-  right: 10px;
-  height: 12px;
-}
-
-.inner-scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
-  min-width: 30px;
-}
-
-.inner-scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  display: block;
-  top: -6px;
-  bottom: -2px;
-}
-
-.inner-scrollbar > .os-scrollbar-vertical {
-  bottom: 10px;
-  width: 4px;
-}
-
-.inner-scrollbar > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
-  min-height: 30px;
-}
-
-.inner-scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  display: block;
-  left: -6px;
-  right: -2px;
-}
-
-.inner-scrollbar > .os-scrollbar-corner {
-  height: 10px;
-  width: 10px;
-  background-color: transparent;
-}
-
-.inner-scrollbar > .os-scrollbar {
-  box-sizing: border-box;
-  background: transparent;
-}
-
-.inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
-  background: rgba(235, 235, 235, 0.6);
-  border-radius: 8px;
-}
-
-.inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
-  border-radius: 8px;
-  background: #E1E3E6;
-}
-
-.inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
-  background: #CCCED1;
-}
-
-.inner-scrollbar > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle {
-  background: #CCCED1;
-}
-
-.inner-scrollbar > .os-scrollbar.os-scrollbar-unusable {
-  background: transparent;
-}
-
-.scrollbar.os-host-rtl > .os-scrollbar-horizontal {
-  left: 10px;
-  right: 0;
-}
-
-.scrollbar.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
-  -webkit-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-}
-
-.scrollbar.os-host-scrollbar-horizontal-hidden > .os-scrollbar-horizontal .os-scrollbar-handle:before {
-  display: none;
-}
-
-.scrollbar.os-host-scrollbar-vertical-hidden > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  display: none;
-}
-
-.os-host-rtl.scrollbar > .os-scrollbar-vertical .os-scrollbar-handle:before {
-  right: -6px;
-  left: -2px;
 }
 
 /* _text-editor.scss 
