--- a/src/main/resources/public/src/scss/process/process.scss
+++ b/src/main/resources/public/src/scss/process/process.scss
@@ -12,6 +12,7 @@
 @import '../template/_mixins.scss'; // 상속 불가
 @import '../template/_alignments.scss'; // 상속 불가
 @import '../template/_common.scss'; // 상속 불가
+@import '../template/_scrollbars.scss';
 @import '_variables.scss';
 @import '_fonts.scss';
 @import '_mixins.scss';
