--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -156,3 +156,17 @@ $btn-group-disabled-border-color:            $line-gray;
 // button-group-toggle 디자인 요소
 $btn-group-toggle-font-color:                $gray;
 $btn-group-toggle-bg-color:                  $light-gray;
+
+//////////////////////////////// scrollbar ////////////////////////////////
+// scrollbar 두께
+$scrollbar-thick: 8px; // 8px
+// element 내부 scrollbar 두께
+$scrollbar-thick-sm: 4px; // 4px 
+// scrollbar 색상
+$scrollbar-color: $default-gray;
+// scrollbar 모서리 곡선
+$scrollbar-border-radius: 8px; // 8px 
+// scrollbar 배경 색상
+$scrollbar-bg-color: rgba(235,235,235, 0.6);
+// scrollbar hover, click 이동시 색상
+$scrollbar-hover-color: $pressed-gray;
