#8954 [커스텀 코드] 조건 미입력 일감 수정 진행

--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -304,7 +304,7 @@
                                 aliceJs.alertSuccess(i18n.msg('customCode.msg.customCodeUsed'));
                                 break;
                             case STATUS_ERROR_CUSTOM_CODE_NAME_DUPLICATION:
-                                aliceJs.alertWarning(i18n.msg('customCode.msg.customCodeNameDuplication'));
+                                aliceJs.alertWarning(i18n.msg('customCode.msg.duplicateCustomCodeName'));
                                 break;
                             case STATUS_ERROR_CUSTOM_CODE_P_CODE_NOT_EXIST:
                                 aliceJs.alertWarning(i18n.msg('customCode.msg.pCodeNotExist'));
